<resources>
    <string name="app_name">TrucoScoreBoard</string>
    <string name="scoreboard_title">Placar de Truco</string>
    <string name="team_a_name">Equipe A</string>
    <string name="team_b_name">Equipe B</string>
    <string name="plus_1_point">+ 1 Ponto</string>
    <string name="plus_3_points">+ 3 Pontos</string>
    <string name="team_a_game_point_alert">Equipe A alcançou a mão de 11!</string>
    <string name="team_b_game_point_alert">Equipe B alcançou a mão de 11!</string>
    <string name="reset_points">Reiniciar Pontuação</string>
    <string name="team_a_has_won_alert">Equipe A venceu a partida!</string>
    <string name="team_b_has_won_alert">Equipe B venceu a partida!</string>
</resources>