<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard_title"
        android:textSize="35sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/team_a_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a_name"
        android:textSize="25sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@id/team_b_name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>

    <TextView
        android:id="@+id/team_b_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_b_name"
        android:textSize="25sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/team_a_name_tv"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>

    <TextView
        android:id="@+id/team_a_points_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_a_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_a_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_a_name_tv" />

    <TextView
        android:id="@+id/team_b_points_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_b_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_b_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_b_name_tv" />

    <Button
        android:id="@+id/team_a_1_point_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_1_point"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_a_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_a_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_a_points_tv"/>

    <Button
        android:id="@+id/team_b_1_point_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_1_point"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_b_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_b_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_b_points_tv"/>

    <Button
        android:id="@+id/team_a_3_point_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_3_points"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_a_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_a_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_a_1_point_bt"/>

    <Button
        android:id="@+id/team_b_3_point_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_3_points"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/team_b_name_tv"
        app:layout_constraintStart_toStartOf="@id/team_b_name_tv"
        app:layout_constraintTop_toBottomOf="@id/team_b_1_point_bt"/>

    <Button
        android:id="@+id/reset_points_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reiniciar Pontuação"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>